--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.8.0",
     "formik": "^2.2.9",
     "material-ui": "^0.20.2",
     "mdbootstrap": "^4.20.0",
+    "mdbreact": "^5.2.0",
+    "moment": "^2.29.3",
+    "moment-timezone": "^0.5.34",
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
+    "react-chartjs-2": "^4.1.0",
     "react-dom": "^18.1.0",
+    "react-moment": "^1.1.2",
     "react-query": "^3.39.1",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.10",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
